# green-paths-2

./: .gitignore  .readthedocs.yml  AUTHORS.rst  CONTRIBUTING.rst  DEV_README.rst  HISTORY.rst  LICENSE  Makefile  README.rst  __init__.py  build_readthedocs.sh  environment.yml  green_paths_2.py  green_paths_2_cli.py  green_paths_2_main.py  install_green_paths_2.bat  install_green_paths_2.sh  pyproject.toml  pytest.ini  requirements.txt  setup.cfg  setup.py  tasks.py  tox.ini
.github/: ISSUE_TEMPLATE.md
.github/workflows/: python-tests.yml
docs/: Makefile  conf.py  make.bat  usage.rst
docs/source/: cli_user_interface.md  conf.py  credits_license_and_citations.md  data_requirements.md  index.rst  installation.md  installation.rst  joojoojoo.md  modules_and_components.md  overview.md  qa_troubleshooting.md  quickstart.md  step_by_step_examples.md  use_cases.md  user_configurations.md
docs/source/_static/: custom.css
green_paths_2/: pipeline_controller.py
green_paths_2/src/: __init__.py  cache_cleaner.py  config.py  config_server.py  config_validator.py  data_utilities.py  database_controller.py  green_paths_exceptions.py  logging.py  osm_network_controller.py  pipeline_controller.py  plotter.py  segment_value_store.py  timer.py
green_paths_2/src/API/: README.md  __init__.py  api_utility_engine.py  aqi_updater.py  celery_worker.py  endpoints.py  green_paths_api.py  models.py  network_builder.py  network_builder_singleton.py  redis_client_singleton.py
green_paths_2/src/data_fetchers/: osm_network_loader.py  wfs.py
green_paths_2/tests/: conftest.py  db_checker_helper.py  readme.md  test_all_pipeline.py  test_cli.py  test_exposure_analysing.py  test_green_paths_2.py  test_preprocessing.py  test_routing.py  test_user_config.py  test_user_config_validator.py  test_validator.py  test_y_exposure_analysing.py  test_z_all_pipeline.py
green_paths_2/user/: config.yaml  config_template.yaml  working_example_config.yaml
ipynb_docs_for_readthedocs/: cli_user_interface.ipynb  credits_license_and_citations.ipynb  data_requirements.ipynb  install_gp2.ipynb  installation.ipynb  modules_and_components.ipynb  overview.ipynb  qa_troubleshooting.ipynb  quickstart.ipynb  step_by_step_examples.ipynb  use_cases.ipynb  user_configurations.ipynb
src/: cli.py  config.py  data_utilities.py  logging.py  parallel_handler.py  plotter.py  timer.py
src/preprocessing/: custom_cost_calculator.py  dask_generator.py  dask_generator_delete_maybe.py  data_source.py  data_types.py  main.py  multiprocessing.py  network_processor.py  osm_network_handler.py  osm_segmenter.py  preprocessing_exceptions.py  raster_operations.py  raster_processor.py  spatial_operations.py  user_config_parser.py  user_data_handler.py  vector_processor.py
src/user/: config.yaml
tests/: __init__.py  test_fetchers.py  test_green_paths_2.py  test_preprocessing.py
(+58 files in other folders)
