[tool.poetry]
name = "green-paths-2"
version = "0.1.0"
description = "Bi-objective exposure routing for healthier path choices"
authors = ["roope heinonen <roope.heinonen@helsinki.fi>"]
readme = "README.rst"

[tool.poetry.dependencies]
python = "^3.11"
black = "^24.2.0"
isort = "^5.13.2"
xarray = "^2024.2.0"
rioxarray = "^0.15.1"
netcdf4 = "^1.6.5"
scipy = "^1.12.0"
ruamel-yaml = "^0.18.6"
r5py = {git = "https://github.com/DigitalGeographyLab/r5py_gp2.git"}
numpy = "^1.26.4"
pyyaml = "^6.0.1"
pyrosm = "^0.6.2"
osmium = "^3.7.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
