[tool.poetry]
name = "green-paths-2"
version = "0.1.0"
description = "Bi-objective exposure routing for healthier path choices"
authors = ["roope heinonen <roope.heinonen@helsinki.fi>"]
readme = "README.rst"

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
invoke = "^1.6.0"  # Replace with the latest version number as necessary
black = "^24.2.0"
isort = "^5.13.2"
xarray = "^2024.2.0"
rioxarray = "^0.15.1"
netcdf4 = "^1.6.5"
scipy = "^1.12.0"
ruamel-yaml = "^0.18.6"
numpy = "^1.26.4"
pyyaml = "^6.0.1"
pyrosm = "^0.6.2"
osmium = "^3.7.0"
rasterio = "^1.3.10"
proj = "^0.2.0"
fiona = "^1.9.6"
geopandas = "^0.14.4"
openpyxl = "^3.1.2"
pysqlite3 = "^0.5.3"
gdal = "^3.9.1"
geos = "^0.2.3"
sphinx = "^7.4.7"
jupyterlab = "^4.2.4"
jupyter = "^1.0.0"
myst-parser = "^3.0.1"
sphinx-autobuild = "^2024.4.16"
sphinx-rtd-theme = "^2.0.0"
r5py = {git = "https://github.com/DigitalGeographyLab/r5py_gp2.git"}
pytest = "^8.3.2"
fastapi = "^0.112.1"
geojson = "^3.1.0"



[tool.poetry.group.dev.dependencies]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"










[tool.poetry.group.docs]
optional = true

[tool.poetry.group.docs.dependencies]
myst-parser = ">=0.16"
sphinx = ">=4.0"
sphinx-autobuild = ">=2021.0"
sphinx-rtd-theme = ">=1.0"